added linkedin and about me info

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1 class="page-title text-secondary bg-dark py-2 px-3">Diego Rivera</h1>
         <nav class="flex-row">
           <a class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="https://github.com/Diegorivera1110">GitHub</a>
+          <a class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="https://www.linkedin.com/in/diego-rivera-67684a225/">LinkedIn</a>
         </nav>
       </div>
     </header>
@@ -25,7 +26,7 @@
           
   <section class="my-3" id="about">
   <h2 class="text-dark bg-primary p-2 display-inline-block">About Me</h2>
-  <p>My name is Diego Rivera and I am from Sacramento, California. I am a Full-Stack Engineer with skills in using HTML, CSS, JavaScript, JQuery, Node.js, MySQL, and ORM.   In my spare time I do enjoy reading, video games, and developing personal projects. </p>
+  <p>My name is Diego Rivera and I am from Sacramento, California. I am a Full-Stack Engineer with skills in using HTML, CSS, JavaScript, JQuery, Node.js, MySQL, and ORM.  <br> In my spare time I do enjoy reading, video games, and developing personal projects. In the top left are links to my Github and LinkedIn if you have any other questions or inquiries so feel free to reach out anytime. Have a great day!</p>
 </section>
   
           
