changed some html and color styling

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
       </section>
 
       <section class="my-3" id="portfolio">
-        <h2 class="text-dark bg-primary p-2 display-inline-block">Work</h2>
+        <h2 class="text-dark bg-primary p-2 display-inline-block">My Work</h2>
         <div class="flex-row justify-space-between">
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
-            <h3 class="portfolio-item-title text-light">Anime4You</h3>
+            <h3 class="portfolio-item-title text-light">Anime4You (Collab Project)</h3>
+            <img src="./assets/images/Anime4You.PNG" alt="screenshot of Anime4You site">
             <h5 class="portfolio-languages">
               Built With: JavaScript, HTML, CSS, jQuery
             </h5>
