modified About me

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     <main class="container my-5">
       <section class="my-3" id="about">
         <h2 class="text-dark bg-primary p-2 display-inline-block">About Me</h2>
-        <p>
+        <p><strong>
           My name is Diego Rivera and I am from Sacramento, California. I am a
           Full-Stack Engineer with skills in using HTML, CSS, JavaScript,
           JQuery, Node.js, MySQL, and ORM. <br />
           In my spare time I do enjoy reading, video games, and developing
           personal projects. In the top left are links to my Github and LinkedIn
           if you have any other questions or inquiries so feel free to reach out
-          anytime. Have a great day!
+          anytime. Have a great day!</strong>
         </p>
       </section>
 
