changed color scheme as well as some wording

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="flex-row justify-space-between">
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
             <h3 class="portfolio-item-title text-light">Anime4You (Collab Project)</h3>
-            <img src="./assets/images/Anime4You.PNG" alt="screenshot of Anime4You site">
+            <a href="https://diegorivera1110.github.io/anime4you/" target="_blank"><img src="./assets/images/Anime4You.PNG" alt="screenshot of Anime4You site"></a>
             <h5 class="portfolio-languages">
               Built With: JavaScript, HTML, CSS, jQuery
             </h5>
@@ -81,7 +81,7 @@
 
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
             <h3 class="portfolio-item-title text-light">
-              Software Team Profile Generator
+              Tech Team Profile Generator
             </h3>
             <h5 class="portfolio-languages">Built With: JavaScript, Node</h5>
             <p>
