added clickable images

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h3 class="portfolio-item-title text-light">
               Tech Team Profile Generator
             </h3>
-            <h5 class="portfolio-languages">Built With: JavaScript, Node</h5>
+            <h5 class="portfolio-languages">Built With: JavaScript, Node.js</h5>
             <p>
               This project was created to use inquirer in the command prompt
               when running 'node index.js' to generate a Software Development
@@ -101,6 +101,7 @@
 
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
             <h3 class="portfolio-item-title text-light">Password Generator</h3>
+            <a href="https://diegorivera1110.github.io/password-generator/"><img src="./assets/images/password-generator.png" alt="screenshot of Password Generator site"></a>
             <h5 class="portfolio-languages">
               Built With: JavaScript, HTML, CSS
             </h5>
@@ -121,7 +122,7 @@
             <h3 class="portfolio-item-title text-light">
               Readme File Generator
             </h3>
-            <h5 class="portfolio-languages">Built With: JavaScript, Node</h5>
+            <h5 class="portfolio-languages">Built With: JavaScript, Node.js</h5>
             <p>
               The purpose of this project is to make it easier and more
               efficient to create a README file for any project and also allows
