--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <h3 class="portfolio-item-title text-light">
               Tech Team Profile Generator
             </h3>
+            <img src="./assets/images/team-generator.png" alt="screenshot of team profile site">
             <h5 class="portfolio-languages">Built With: JavaScript, Node.js</h5>
             <p>
               This project was created to use inquirer in the command prompt
