--- a/index.html
+++ b/index.html
@@ -137,6 +137,24 @@
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
           </div>
+
+          <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
+            <h3 class="portfolio-item-title text-light">Just Recipes (Under Construction)</h3>
+            <a href="https://diegorivera1110.github.io/password-generator/"><img src="./assets/images/Just-recipes.PNG" alt="screenshot Just Recipes landing page"></a>
+            <h5 class="portfolio-languages">
+              Built With: JavaScript, Handlebars.js, CSS
+            </h5>
+            <p>
+              This was a group project that was inspired by mine and my classmates shared frustration with looking up recipes online and having to dig for recipes through lengthy stories 
+              and anecdotes to find the instructions and necessities for a recipe. Our site allows users to sign up and add their own recipes as well as comment and like other recipes that have been added to the site. 
+            </p>
+            <a
+              href="https://github.com/mpeterson56/Just-Recipes/tree/develop"
+              class="btn mt-auto"
+              ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
+            >
+          </div>
+
         </div>
       </section>
     </main>
