--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
     />
     <link rel="stylesheet" href="./assets/style.css" />
     <link
-      rel="icon"
-      type="image/x-icon"
+    rel="icon"
+    type="image/x-icon"
       href="./assets/images/professional-portfolio.png"
-    />
-  </head>
+      />
+    </head>
+    
+    <body>
+      <header>
+        <div class="container flex-row justify-space-between align-center py-3">
+          <h1 class="page-title text-secondary bg-dark py-2 px-3">
+            Diego Rivera
+          </h1>
 
-  <body>
-    <header>
-      <div class="container flex-row justify-space-between align-center py-3">
-        <h1 class="page-title text-secondary bg-dark py-2 px-3">
-          Diego Rivera
-        </h1>
         <nav class="flex-row">
           <a
             class="ml-2 my-1 px-2 py-1 bg-secondary text-dark"
@@ -38,11 +39,12 @@
             href="https://www.linkedin.com/in/diego-rivera-67684a225/"
             >LinkedIn</a
           >
+          <a  class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="#contact">Contact Me</a>
         </nav>
       </div>
     </header>
     <main class="container my-5">
-      <section class="my-3" id="about">
+      <section class="my-3 background" id="about">
         <h2 class="text-dark bg-primary p-2 display-inline-block">About Me</h2>
         <p><strong>
           My name is Diego Rivera and I am from Sacramento, California. I am a
@@ -159,6 +161,11 @@
       </section>
     </main>
     <footer class="container text-center py-3">
+      <h3 id="contact">Contact Me</h3>
+      <h5>Email: diegorivera1110@gmail.com</h5>
+      <h5>Cell: (916)508-0261</h5>
+      <img src="./assets/images/IMG_2413 (2).jpg" id="profile-picture" alt="">
+      <br>
       <h3 class="text-dark">&copy; 2022 by Diego Rivera</h3>
     </footer>
   </body>
