updated budget tracker to portfolio

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     />
     <link rel="stylesheet" href="./assets/style.css" />
     <link
-    rel="icon"
-    type="image/x-icon"
+      rel="icon"
+      type="image/x-icon"
       href="./assets/images/professional-portfolio.png"
-      />
-    </head>
-    
-    <body>
-      <header>
-        <div class="container flex-row justify-space-between align-center py-3">
-          <h1 class="page-title text-secondary bg-dark py-2 px-3">
-            Diego Rivera
-          </h1>
+    />
+  </head>
+
+  <body>
+    <header>
+      <div class="container flex-row justify-space-between align-center py-3">
+        <h1 class="page-title text-secondary bg-dark py-2 px-3">
+          Diego Rivera
+        </h1>
 
         <nav class="flex-row">
           <a
@@ -39,21 +39,25 @@
             href="https://www.linkedin.com/in/diego-rivera-67684a225/"
             >LinkedIn</a
           >
-          <a  class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="#contact">Contact Me</a>
+          <a class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="#contact"
+            >Contact Me</a
+          >
         </nav>
       </div>
     </header>
     <main class="container my-5">
       <section class="my-3 background" id="about">
         <h2 class="text-dark bg-primary p-2 display-inline-block">About Me</h2>
-        <p><strong>
-          My name is Diego Rivera and I am from Sacramento, California. I am a
-          Full-Stack Engineer with skills in using HTML, CSS, JavaScript,
-          JQuery, Node.js, MySQL, and ORM. <br />
-          In my spare time I do enjoy reading, video games, and developing
-          personal projects. In the top left are links to my Github and LinkedIn
-          if you have any other questions or inquiries so feel free to reach out
-          anytime. Have a great day!</strong>
+        <p>
+          <strong>
+            My name is Diego Rivera and I am from Sacramento, California. I am a
+            Full-Stack Engineer with skills in using HTML, CSS, JavaScript,
+            JQuery, Node.js, MySQL, and ORM. <br />
+            In my spare time I do enjoy reading, video games, and developing
+            personal projects. In the top left are links to my Github and
+            LinkedIn if you have any other questions or inquiries so feel free
+            to reach out anytime. Have a great day!</strong
+          >
         </p>
       </section>
 
@@ -61,8 +65,16 @@
         <h2 class="text-dark bg-primary p-2 display-inline-block">My Work</h2>
         <div class="flex-row justify-space-between">
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
-            <h3 class="portfolio-item-title text-light">Anime4You (Collab Project)</h3>
-            <a href="https://diegorivera1110.github.io/anime4you/" target="_blank"><img src="./assets/images/Anime4You.PNG" alt="screenshot of Anime4You site"></a>
+            <h3 class="portfolio-item-title text-light">
+              Anime4You (Collab Project)
+            </h3>
+            <a
+              href="https://diegorivera1110.github.io/anime4you/"
+              target="_blank"
+              ><img
+                src="./assets/images/Anime4You.PNG"
+                alt="screenshot of Anime4You site"
+            /></a>
             <h5 class="portfolio-languages">
               Built With: JavaScript, HTML, CSS, jQuery
             </h5>
@@ -85,7 +97,10 @@
             <h3 class="portfolio-item-title text-light">
               Tech Team Profile Generator
             </h3>
-            <img src="./assets/images/team-generator.png" alt="screenshot of team profile site">
+            <img
+              src="./assets/images/team-generator.png"
+              alt="screenshot of team profile site"
+            />
             <h5 class="portfolio-languages">Built With: JavaScript, Node.js</h5>
             <p>
               This project was created to use inquirer in the command prompt
@@ -104,7 +119,11 @@
 
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
             <h3 class="portfolio-item-title text-light">Password Generator</h3>
-            <a href="https://diegorivera1110.github.io/password-generator/"><img src="./assets/images/password-generator.png" alt="screenshot of Password Generator site"></a>
+            <a href="https://diegorivera1110.github.io/password-generator/"
+              ><img
+                src="./assets/images/password-generator.png"
+                alt="screenshot of Password Generator site"
+            /></a>
             <h5 class="portfolio-languages">
               Built With: JavaScript, HTML, CSS
             </h5>
@@ -125,6 +144,11 @@
             <h3 class="portfolio-item-title text-light">
               Readme File Generator
             </h3>
+            <a href="https://github.com/Diegorivera1110/readme-generator"
+              ><img
+                src="./assets/images/readme-generator.PNG"
+                alt="screenshot of readme page"
+            /></a>
             <h5 class="portfolio-languages">Built With: JavaScript, Node.js</h5>
             <p>
               The purpose of this project is to make it easier and more
@@ -140,7 +164,7 @@
             >
           </div>
 
-          <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
+          <!-- <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
             <h3 class="portfolio-item-title text-light">Just Recipes (Under Construction)</h3>
             <a href="https://diegorivera1110.github.io/password-generator/"><img src="./assets/images/Just-recipes.PNG" alt="screenshot Just Recipes landing page"></a>
             <h5 class="portfolio-languages">
@@ -155,8 +179,32 @@
               class="btn mt-auto"
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
-          </div>
+          </div> -->
 
+          <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
+            <h3 class="portfolio-item-title text-light">Budget Tracker</h3>
+            <a href="https://mysterious-cliffs-98641.herokuapp.com/"
+              ><img
+                src="./assets/images/budget-tracker.PNG"
+                alt="screenshot of budget tacker site"
+            /></a>
+            <h5 class="portfolio-languages">
+              Built With: NoSQL, IndexedDB, Mongoose, & JavaScript
+            </h5>
+            <p>
+              This project was provided to add offline fucntionality and access
+              to an already functional budget tracker. This task was completed
+              by using IndexdDB for the offline functionality as well as a
+              service worker to handle network requests from the client. The
+              Budget Tracker is able to track withdrawls and deposits with or
+              without an internet connection.
+            </p>
+            <a
+              href="https://github.com/Diegorivera1110/Budget-Tracker"
+              class="btn mt-auto"
+              ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
+            >
+          </div>
         </div>
       </section>
     </main>
@@ -164,8 +212,8 @@
       <h3 id="contact">Contact Me</h3>
       <h5>Email: diegorivera1110@gmail.com</h5>
       <h5>Cell: (916)508-0261</h5>
-      <img src="./assets/images/IMG_2413 (2).jpg" id="profile-picture" alt="">
-      <br>
+      <img src="./assets/images/IMG_2413 (2).jpg" id="profile-picture" alt="" />
+      <br />
       <h3 class="text-dark">&copy; 2022 by Diego Rivera</h3>
     </footer>
   </body>
