added resume button with link to resume site

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             href="https://www.linkedin.com/in/diego-rivera-67684a225/"
             >LinkedIn</a
           >
+          <a
+          class="ml-2 my-1 px-2 py-1 bg-secondary text-dark"
+          href="https://zety.com/profile/e404-220402103657"
+          >Resume</a
+        >
           <a class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="#contact"
             >Contact Me</a
           >
