updated resume link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           >
           <a
           class="ml-2 my-1 px-2 py-1 bg-secondary text-dark"
-          href="https://zety.com/profile/e404-220402103657"
+          href="https://docs.google.com/document/d/e/2PACX-1vS6fX2efKLmha3TK4dl2fIgnYPsnyQKUbofPg0K8W9ntl9m_F3lGK6NilBPYEdO3SnL21f-N-Y0-DFy/pub"
           >Resume</a
         >
           <a class="ml-2 my-1 px-2 py-1 bg-secondary text-dark" href="#contact"
