testing adding new button for project links to live site

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
               class="btn mt-auto"
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
+            <a
+              href="https://github.com/Diegorivera1110/anime4you"
+              class="btn mt-auto"
+              ><i class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a
+            >
           </div>
 
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
