--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
             <a
-              href="https://github.com/Diegorivera1110/anime4you"
+              href="https://diegorivera1110.github.io/Portfolio-2.0/"
               class="btn mt-auto"
               ><i class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a
             >
@@ -125,6 +125,10 @@
               class="btn mt-auto"
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
+            <a
+            class="btn mt-auto"
+            ><i class="mr-2"></i>No live site available for this program</a
+          >
           </div>
 
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
@@ -147,6 +151,11 @@
               href="https://github.com/Diegorivera1110/password-generator"
               class="btn mt-auto"
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
+            >
+            <a
+              href="https://diegorivera1110.github.io/password-generator/"
+              class="btn mt-auto"
+              ><i class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a
             >
           </div>
 
