added live site buttons to all projects

--- a/index.html
+++ b/index.html
@@ -91,16 +91,18 @@
               similar shows to the one they searched. The site also allows the
               user to create a watchlist that stores to local storage.
             </p>
+            <!-- Project buttons -->
             <a
               href="https://github.com/Diegorivera1110/anime4you"
               class="btn mt-auto"
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
             <a
-              href="https://diegorivera1110.github.io/Portfolio-2.0/"
+              href="https://diegorivera1110.github.io/anime4you/"
               class="btn mt-auto"
               ><i class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a
             >
+            <!-- end project buttons -->
           </div>
 
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
@@ -120,6 +122,7 @@
               team starting with the Manager and including Interns and
               Engineers.
             </p>
+            <!-- Project buttons -->
             <a
               href="https://github.com/Diegorivera1110/Team-Profile-Generator"
               class="btn mt-auto"
@@ -129,6 +132,7 @@
             class="btn mt-auto"
             ><i class="mr-2"></i>No live site available for this program</a
           >
+          <!-- end project buttons -->
           </div>
 
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
@@ -147,6 +151,7 @@
               they want to or don't want to include uppercase or lowercase
               letters and if they want to inlcude numbers or special characters.
             </p>
+            <!-- project buttons -->
             <a
               href="https://github.com/Diegorivera1110/password-generator"
               class="btn mt-auto"
@@ -157,6 +162,7 @@
               class="btn mt-auto"
               ><i class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a
             >
+            <!-- end project buttons -->
           </div>
 
           <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
@@ -181,6 +187,10 @@
               class="btn mt-auto"
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
+            <a
+            class="btn mt-auto"
+            ><i class="mr-2"></i>Live site is not applicable to this program</a
+          >
           </div>
 
           <!-- <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
@@ -218,11 +228,18 @@
               Budget Tracker is able to track withdrawls and deposits with or
               without an internet connection.
             </p>
+            <!-- project buttons -->
             <a
               href="https://github.com/Diegorivera1110/Budget-Tracker"
               class="btn mt-auto"
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
+            <a
+              href="https://mysterious-cliffs-98641.herokuapp.com/"
+              class="btn mt-auto"
+              ><i class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a
+            >
+            <!-- Project buttons end -->
           </div>
         </div>
       </section>
