--- a/index.html
+++ b/index.html
@@ -241,6 +241,30 @@
             >
             <!-- Project buttons end -->
           </div>
+
+          <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
+            <h3 class="portfolio-item-title text-light">
+              Book Search Engine
+            </h3>
+            <img
+              src="./assets/images/team-generator.png"
+              alt="screenshot of team profile site"
+            />
+            <h5 class="portfolio-languages">Built With: MERN Stack, GraphQL, Apollo</h5>
+            <p>
+              This project was assigned with the task to set up an Apollo Server that uses GraphQL queries and mutations for fetching and modifying data.
+              The main goal was to replace the existing RESTful API already in place of the app. An Apollo Provider had to be created in order to communicate with the Apollo Server.
+              The site allows you to look up any book or author using the Google Books Search Engine. The site also allows for the signing up of a User which would allow for the creation of a "My books list".
+            </p>
+            <!-- Project buttons -->
+            <a
+              href="https://github.com/Diegorivera1110/Team-Profile-Generator"
+              class="btn mt-auto"
+              ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
+            >
+            
+          <!-- end project buttons -->
+          </div>
         </div>
       </section>
     </main>
