updated new project image accessibility and buttons

--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
             <h3 class="portfolio-item-title text-light">
               Book Search Engine
             </h3>
-            <img
-              src="./assets/images/team-generator.png"
-              alt="screenshot of team profile site"
-            />
+            <a href="https://safe-dusk-63747.herokuapp.com/" target="_blank"><img
+              src="./assets/images/book-search-screenshot.PNG"
+              alt="screenshot of book search engine site"
+            /></a>
             <h5 class="portfolio-languages">Built With: MERN Stack, GraphQL, Apollo</h5>
             <p>
               This project was assigned with the task to set up an Apollo Server that uses GraphQL queries and mutations for fetching and modifying data.
@@ -258,11 +258,15 @@
             </p>
             <!-- Project buttons -->
             <a
-              href="https://github.com/Diegorivera1110/Team-Profile-Generator"
+              href="https://github.com/Diegorivera1110/Book-Search-Engine"
               class="btn mt-auto"
               ><i class="fab fa-github mr-2"></i>View Project on GitHub</a
             >
-            
+            <a
+            href="https://safe-dusk-63747.herokuapp.com/"
+            class="btn mt-auto"
+            ><i class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a
+          >
           <!-- end project buttons -->
           </div>
         </div>
