updated section headers to no longer look like buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </header>
   <main class="container my-5">
     <section class="my-3 background" id="about">
-      <h2 class="text-dark bg-primary p-2 display-inline-block">About Me</h2>
+      <h2 class="text-dark bg-primary p-2 display-inline-block"><strong><u>About Me</u></strong></h2>
       <p>
         <strong>
           My name is Diego Rivera and I am from Sacramento, California. I am a
@@ -45,7 +45,7 @@
     </section>
 
     <section class="my-3" id="portfolio">
-      <h2 class="text-dark bg-primary p-2 display-inline-block">My Work</h2>
+      <h2 class="text-dark bg-primary p-2 display-inline-block"><strong><u>My Work</u></strong></h2>
       <div class="flex-row justify-space-between">
         <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
           <h3 class="portfolio-item-title text-light">
