--- a/index.html
+++ b/index.html
@@ -173,6 +173,28 @@
           <!-- Project buttons end -->
 
         </div>
+
+        <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
+          <h3 class="portfolio-item-title text-light">Password Generator</h3>
+          <a href="https://diegorivera1110.github.io/password-generator/"><img
+              src="./assets/images/password-generator.png" alt="screenshot of Password Generator site" /></a>
+          <h5 class="portfolio-languages">
+            Built With: JavaScript, HTML, CSS
+          </h5>
+          <p>
+            I developed this project to generate random passwords that also
+            gives the user to choose criteria fot their password such as if
+            they want to or don't want to include uppercase or lowercase
+            letters and if they want to inlcude numbers or special characters.
+          </p>
+          <!-- project buttons -->
+          <a href="https://github.com/Diegorivera1110/password-generator" class="btn mt-auto"><i
+              class="fab fa-github mr-2"></i>View Project on GitHub</a>
+          <a href="https://diegorivera1110.github.io/password-generator/" class="btn mt-auto"><i
+              class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a>
+          <!-- end project buttons -->
+        </div>
+
       </div>
     </section>
   </main>
