updated card text

--- a/index.html
+++ b/index.html
@@ -175,17 +175,16 @@
         </div>
 
         <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
-          <h3 class="portfolio-item-title text-light">Password Generator</h3>
+          <h3 class="portfolio-item-title text-light">Book Search Engine</h3>
           <a href="https://diegorivera1110.github.io/password-generator/"><img
               src="./assets/images/password-generator.png" alt="screenshot of Password Generator site" /></a>
           <h5 class="portfolio-languages">
-            Built With: JavaScript, HTML, CSS
+            Built With: MERN Stack & GraphQL API
           </h5>
           <p>
-            I developed this project to generate random passwords that also
-            gives the user to choose criteria fot their password such as if
-            they want to or don't want to include uppercase or lowercase
-            letters and if they want to inlcude numbers or special characters.
+            This app allows users to search any book as well as signup for an account that allows you to save any
+            searched books to that account. I refactored this app from using a RESTful API to a GraphQL API with an
+            Apollo Server.
           </p>
           <!-- project buttons -->
           <a href="https://github.com/Diegorivera1110/password-generator" class="btn mt-auto"><i
