updated links on car

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 
         <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
           <h3 class="portfolio-item-title text-light">Book Search Engine</h3>
-          <a href="https://diegorivera1110.github.io/password-generator/"><img
-              src="./assets/images/password-generator.png" alt="screenshot of Password Generator site" /></a>
+          <a href="https://safe-dusk-63747.herokuapp.com/"><img
+              src="./assets/images/book-search.png" alt="screenshot of Password Generator site" /></a>
           <h5 class="portfolio-languages">
             Built With: MERN Stack & GraphQL API
           </h5>
@@ -187,9 +187,9 @@
             Apollo Server.
           </p>
           <!-- project buttons -->
-          <a href="https://github.com/Diegorivera1110/password-generator" class="btn mt-auto"><i
+          <a href="https://github.com/Diegorivera1110/Book-Search-Engine" class="btn mt-auto"><i
               class="fab fa-github mr-2"></i>View Project on GitHub</a>
-          <a href="https://diegorivera1110.github.io/password-generator/" class="btn mt-auto"><i
+          <a href="https://safe-dusk-63747.herokuapp.com/" class="btn mt-auto"><i
               class="fas fa-external-link-square-alt mr-2"></i>View Project Site</a>
           <!-- end project buttons -->
         </div>
