added more to About me

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <strong>
           My name is Diego Rivera and I am from Sacramento, California. I am a
           Full-Stack Engineer with skills in using HTML, CSS, JavaScript,
-          JQuery, Node.js, MySQL, and ORM. <br />
+          JQuery, Node.js, MySQL, ORM, and the full MERN Stack.
+          I enjoy both what the frontend and backend technologies have to offer in development, but if I had to choose a
+          favorite it would definitely be backend development. <br />
           In my spare time I do enjoy reading, video games, and developing
           personal projects. In the top left are links to my Github and
           LinkedIn if you have any other questions or inquiries so feel free
@@ -175,8 +177,8 @@
 
         <div class="col-12 col-md-6 mb-2 bg-dark text-light p-3 flex-column">
           <h3 class="portfolio-item-title text-light">Book Search Engine</h3>
-          <a href="https://safe-dusk-63747.herokuapp.com/"><img
-              src="./assets/images/book-search.png" alt="screenshot of Password Generator site" /></a>
+          <a href="https://safe-dusk-63747.herokuapp.com/"><img src="./assets/images/book-search.png"
+              alt="screenshot of Password Generator site" /></a>
           <h5 class="portfolio-languages">
             Built With: MERN Stack & GraphQL API
           </h5>
