Corrected grammar and wording in About section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           My name is Diego Rivera and I am from Sacramento, California. I am a
           Full-Stack Engineer with skills in using HTML, CSS, JavaScript,
           JQuery, Node.js, MySQL, ORM, and the full MERN Stack.
-          I enjoy both what the frontend and backend technologies have to offer in development, but if I had to choose a
-          favorite it would definitely be backend development. <br />
+          I enjoy both what the Frontend and Backend technologies have to offer in development, but if I had to choose a
+          Tech Stack I excel in it would be Backend Technologies and Languages. <br />
           In my spare time I do enjoy reading, video games, and developing
           personal projects. In the top left are links to my Github and
           LinkedIn if you have any other questions or inquiries so feel free
