edited About me

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           I enjoy both what the Frontend and Backend technologies have to offer in development, but if I had to choose a
           Tech Stack I excel in it would be Backend Technologies and Languages. <br />
           In my spare time I do enjoy reading, video games, and developing
-          personal projects. In the top left are links to my Github and
-          LinkedIn if you have any other questions or inquiries so feel free
+          personal projects. In the top right are links to my Github and
+          LinkedIn as well as my Resume if you have any other questions or inquiries so feel free
           to reach out anytime. Have a great day!</strong>
       </p>
     </section>
